--- a/api_getway/DayscoolAPI/package.json
+++ b/api_getway/DayscoolAPI/package.json
@@ -32,7 +32,8 @@
 		"koa-router": "^7.3.0",
 		"lodash.merge": "^4.6.0",
 		"request": "^2.83.0",
-		"request-promise-native": "^1.0.5"
+		"request-promise-native": "^1.0.5",
+		"ldapjs": "^2.2.0"
 	},
 	"devDependencies": {
 		"eslint": "^4.16.0",
