--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,8 +65,8 @@ services:
     environment:
       COMPOSE_HTTP_TIMEOUT: 200
       LDAP_LOG_LEVEL: "256"
-      LDAP_ORGANISATION: "Software Architecture"
-      LDAP_DOMAIN: "arqsoft.unal.edu.co"
+      LDAP_ORGANISATION: "DaysCool Software"
+      LDAP_DOMAIN: "dayscool.unal.edu.co"
       LDAP_BASE_DN: ""
       LDAP_ADMIN_PASSWORD: "admin"
       LDAP_CONFIG_PASSWORD: "config"
@@ -97,14 +97,14 @@ services:
     ports:
       - "389:389"
       - "636:636"
-    hostname: "arqsoft.unal.edu.co"
+    hostname: "dayscool.unal.edu.co"
   phpldapadmin:
     image: osixia/phpldapadmin:latest
     container_name: ldap_client
     environment:
       PHPLDAPADMIN_LDAP_HOSTS: "sa-ldap"
       PHPLDAPADMIN_HTTPS: "false"
-      ServerName: "arqsoft.unal.edu.co"
+      ServerName: "dayscool.unal.edu.co"
     ports:
       - "8085:80"
     links:
