--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,11 +29,11 @@ services:
     ports:
       - "10100:10100"
 
-  ms_auth_token:
-    container_name: ms_auth_token
-    build: ./back-end/new-auth
-    ports:
-      - "10500:10500"
+  # ms_auth_token:
+  #   container_name: ms_auth_token
+  #   build: ./back-end/new-auth
+  #   ports:
+  #     - "10500:10500"
 
   ms_cursos:
     container_name: ms_cursos
@@ -68,8 +68,9 @@ services:
   soap:
     container_name: soap
     build: ./soap
+    command: /bin/bash -c "rm -f /tmp/server.pid && bundle exec rails server -p 3000 -b 0.0.0.0"
     ports:
-      - "6000:3000"
+      - "3010:3000"
   sa-ldap:
     image: osixia/openldap
     container_name: sa_ldap
