--- a/soap/dockerfile
+++ b/soap/dockerfile
@@ -9,10 +9,8 @@ RUN apt-get update && apt-get install -y \
   echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list && \
   apt-get update && apt-get install -y nodejs yarn
 
-RUN mkdir /app
-WORKDIR /app
-
-EXPOSE 3000
+# RUN mkdir /app
+# WORKDIR /app
 
 COPY Gemfile .
 COPY Gemfile.lock .
@@ -23,4 +21,5 @@ COPY package.json .
 COPY yarn.lock .
 COPY . .
 RUN yarn install
-CMD [ "rails", "server", "-b", "0.0.0.0" ]
+
+EXPOSE 3010
